kalaw-grammar fix

--- a/posts/gotta-love-kalaw.mdx
+++ b/posts/gotta-love-kalaw.mdx
@@ -15,7 +15,7 @@ Me and my friend, Tun, didn’t really have any plan beforehand for this trip so
 
 #### Kalaw Market
 
-The Kalaw market offers a rich variety of organic local Shan products. You can find avocados, oranges, tea leaves, meat, poultry, greens, ...
+The Kalaw market offers a rich variety of organic local Shan products. You can find avocados, oranges, tea leaves, meat, poultry, greens, Khaw Pote (Shan snack), pickled vegetables and many more.
 
 <img
   alt={`Kalaw Market`}
@@ -75,13 +75,13 @@ Sadly, we were not trekking because of the time constraint. I assured myself I w
 
 #### Mine Lone Hill
 
-Still we made it to the bottom of Mine Lone hill monastery. We were expecting a hiking trail to top of the hill but it was a continuous climb of 45-degree steep staircases. Although the stairs were somewhat torn, eroded and lacking maintenance, the climb was manageable. It was supposed to be a 30-minute climb and we were overconfident we would make it shortly. 20 minutes into it, we failed miserably. Tun started puking and falling asleep. I had a sudden shortness of breath and retired myself over a wooden bench. Besides, junta troops were camping in the hilltop monastery. _Typical._
+Still we made it to the bottom of Mine Lone hill monastery. We were expecting a hiking trail to the top of the hill but it was a continuous climb of 45-degree steep staircases. Although the stairs were somewhat torn, eroded and lacking maintenance, the climb was manageable. It was supposed to be a 30-minute climb and we were overconfident we would make it shortly. 20 minutes into it, we failed miserably. Tun started puking and falling asleep. I had a sudden shortness of breath and retired myself over a wooden bench. Besides, junta troops were camping in the hilltop monastery. _Typical._
 
 Lessons were learned the hard way. Never race hike after lunch.
 
 <img
   alt={`Amidst Mine Lone Climb`}
-  src={`/static/images/kalaw/fatigue.jpg`}
+  src={`/static/images/kalaw/fatigue.JPG`}
   width={1500}
   height={1000}
 />
