hyperlink in mdx

--- a/posts/gotta-love-kalaw.mdx
+++ b/posts/gotta-love-kalaw.mdx
@@ -24,7 +24,7 @@ The Kalaw market offers a rich variety of organic local Shan products. You can f
   height={1008}
 />
 
-We were there every morning for Shan noodles, fried tofu, tofu nway and hin htote. I was savoring all the fantastic flavors with the hot herbal tea. Eating in the market was without a doubt, exceptional considering there are shoppers strolling around nearby and you can hear distant sounds of chatters all over the place. It’s a full-blown experience to eat like a local. Don’t miss it.
+We were there every morning for Shan noodles, fried tofu, tofu nway and hin htote. I was savoring all the fantastic flavors with the hot herbal tea. Eating in the market was without a doubt, exceptional considering there are shoppers strolling around nearby and you can hear distant sounds of chatters all over the place. It’s a full-blown experience to eat like a local. _Don’t miss it._
 
 <p class="tip">Tip: Always go for breakfast in the market.</p>
 
@@ -107,20 +107,18 @@ The bar does not serve food so I had takeouts of BBQ skewers from the street gri
 
 ### Other Notable Places We Visited
 
-1. <a
-     class="hyperlink"
+1. <Hyperlink
      href="https://www.google.com/maps/place/JG46%2B89M+Kalaw+view+Point+sightseeing,+Kalaw,+Myanmar+(Burma)/@20.6058421,96.5109346,17z/data=!4m2!3m1!1s0x30ceb74753f34ec7:0x7bbd6dc4efe7c6b7"
-     target="_blank"
-   >
-     Kalaw view point sightseeing
-   </a>
-2. <a
-     class="hyperlink"
+     text="Kalaw view point sightseeing"
+   />
+2. <Hyperlink
+     href="https://www.google.com/maps/place/Kalaw+City+View+(%E1%80%80%E1%80%9C%E1%80%B1%E1%80%AC%E1%80%99%E1%80%BC%E1%80%AD%E1%80%AF%E1%80%B7%E1%80%9B%E1%80%BE%E1%80%B0%E1%80%81%E1%80%84%E1%80%BA%E1%80%B8)/@20.6444001,96.5629152,13z/data=!4m12!1m6!3m5!1s0x30ceb786f3f218d1:0xbc3c00e4faa2c764!2zS2FsYXcgQ2l0eSBWaWV3ICjhgIDhgJzhgLHhgKzhgJnhgLzhgK3hgK_hgLfhgJvhgL7hgLDhgIHhgIThgLrhgLgp!8m2!3d20.6444001!4d96.5629152!3m4!1s0x30ceb786f3f218d1:0xbc3c00e4faa2c764!8m2!3d20.6444001!4d96.5629152"
+     text="Kalaw City View"
+   />
+3. <Hyperlink
      href="https://www.google.com/maps/place/20%C2%B058'24.7%22N+96%C2%B031'34.3%22E/@20.9070558,96.6306052,10z"
-     target="_blank"
-   >
-     Blue Lake of Ywangan
-   </a>
+     text="Blue Lake of Ywangan"
+   />
 
 ### Recap
 
