kalaw-new photo

--- a/posts/gotta-love-kalaw.mdx
+++ b/posts/gotta-love-kalaw.mdx
@@ -105,6 +105,13 @@ We hopped into Hi Bar around 6 PM. It is a tiny bustling bar, yet you can feel t
 
 The bar does not serve food so I had takeouts of BBQ skewers from the street grills next door. I washed them down with a couple of whiskey sour and boy, the combo was just incredible. The bar had pre-2000s Burmese music running in the background and it was nostalgia-inducing. If you ask me about one memorable thing from this bar, it would be the toast from the bar owner, U Myo, “Here’s to drinking till 90!” _Catchy._ The moment was short-lived as the place closed at 8 PM sharp.
 
+<img
+  alt={`BBQ skewers`}
+  src={`/static/images/kalaw/skewers.JPG`}
+  width={1500}
+  height={1000}
+/>
+
 ### Other Notable Places We Visited
 
 1. <Hyperlink
